--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@ p{
         display: flex;
         flex-wrap: wrap;
         gap: 1rem;
-        padding: 0 3rem;
+        padding: 0 3rem 0.5rem 3rem;
     }
     
     .single-post{
